[gd_scene load_steps=8 format=3 uid="uid://bd06smlahh8gb"]

[ext_resource type="Script" uid="uid://dtf5x2i5gcksi" path="res://src/Menus/Editor/EditorError/editor_error.gd" id="1_yhr00"]
[ext_resource type="Theme" uid="uid://t8gshn41l055" path="res://assets/UI/SimpleBox.tres" id="1_yhxey"]
[ext_resource type="FontFile" uid="uid://buaj0e6ma8lke" path="res://assets/fonts/Lemon Days.ttf" id="2_xsqe2"]
[ext_resource type="Texture2D" uid="uid://f6sytssnr3aa" path="res://assets/images/UI/buttonNormal.png" id="3_wjd3m"]
[ext_resource type="Texture2D" uid="uid://ds6mc7tp31i8t" path="res://assets/images/UI/buttonPressed.png" id="4_yhr00"]
[ext_resource type="Texture2D" uid="uid://hp1uhoihkab3" path="res://assets/images/UI/buttonHover.png" id="5_ll3bf"]
[ext_resource type="AudioStream" uid="uid://htjx06tbxrb5" path="res://assets/audio/SFX/message.wav" id="7_ll3bf"]

[node name="EditorError" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yhr00")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(1200, 1200)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_yhxey")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 100
alignment = 1

[node name="Title" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_xsqe2")
theme_override_font_sizes/font_size = 96
text = "Error title"
horizontal_alignment = 1

[node name="Content" type="Label" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(1200, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_xsqe2")
theme_override_font_sizes/font_size = 72
text = "error content"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Buttons" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="OkButton" type="TextureButton" parent="Panel/VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("3_wjd3m")
texture_pressed = ExtResource("4_yhr00")
texture_hover = ExtResource("5_ll3bf")

[node name="OkLabel" type="Label" parent="Panel/VBoxContainer/Buttons/OkButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -2.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_xsqe2")
theme_override_font_sizes/font_size = 84
text = "OK"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NoButton" type="TextureButton" parent="Panel/VBoxContainer/Buttons"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("3_wjd3m")
texture_pressed = ExtResource("4_yhr00")
texture_hover = ExtResource("5_ll3bf")

[node name="NoLabel" type="Label" parent="Panel/VBoxContainer/Buttons/NoButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -2.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_xsqe2")
theme_override_font_sizes/font_size = 84
text = "No"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CancelButton" type="TextureButton" parent="Panel/VBoxContainer/Buttons"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("3_wjd3m")
texture_pressed = ExtResource("4_yhr00")
texture_hover = ExtResource("5_ll3bf")

[node name="Label" type="Label" parent="Panel/VBoxContainer/Buttons/CancelButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -2.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_xsqe2")
theme_override_font_sizes/font_size = 84
text = "Cancel"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Error" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_ll3bf")
bus = &"SFX"

[connection signal="pressed" from="Panel/VBoxContainer/Buttons/OkButton" to="." method="_on_ok_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Buttons/NoButton" to="." method="_on_no_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Buttons/CancelButton" to="." method="_on_cancel_button_pressed"]
